--- a/packages/emails/templates/confirm-email.html
+++ b/packages/emails/templates/confirm-email.html
@@ -474,7 +474,7 @@
                                         <a href="{{base_url}}" target="_blank">
                                           <img
                                             height="19"
-                                            src="https://app.quillsocial.co/emails/logo.png"
+                                            src="https://app.quillsocial.com/emails/logo.png"
                                             style="
                                               border: 0;
                                               display: block;
